Franz のファイルをダウンロードしてインストール

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,5 +1,17 @@
 - hosts: localhost
   connection: local
+  vars:
+    dmg_path: "{{ansible_env.HOME}}/Downloads"
+    dmgs:
+      - {
+        name: "Franz",
+        url: "https://github.com/meetfranz/franz/releases/download/v5.0.0-beta.14/franz-5.0.0-beta.14.dmg",
+        force: false,
+        installed_name: "no_path",
+        state: "absent"
+      }
+  roles:
+    - role: pipersniper.macos_installer
   tasks:
   - name: homebrew | update
     command: brew update
@@ -21,3 +33,8 @@
     command: brew bundle
     register: brewfile
   - debug: var=brewfile.stdout_lines
+  - name: Install .dmgs
+    get_url:
+      url: "{{ item.url }}"
+      dest: "{{ dmg_path }}/{{ item.name }}.dmg"
+    with_items: "{{ dmgs }}"
