Franz が正しくインストールされるよう修正

--- a/playbook.yml
+++ b/playbook.yml
@@ -8,10 +8,17 @@
         url: "https://github.com/meetfranz/franz/releases/download/v5.0.0-beta.14/franz-5.0.0-beta.14.dmg",
         force: false,
         installed_name: "no_path",
-        state: "absent"
+        state: "present"
       }
+  pre_tasks:
+  - name: Install .dmgs
+    get_url:
+      url: "{{ item.url }}"
+      dest: "{{ dmg_path }}/{{ item.name }}.dmg"
+    with_items: "{{ dmgs }}"
   roles:
     - role: pipersniper.macos_installer
+
   tasks:
   - name: homebrew | update
     command: brew update
@@ -33,8 +40,3 @@
     command: brew bundle
     register: brewfile
   - debug: var=brewfile.stdout_lines
-  - name: Install .dmgs
-    get_url:
-      url: "{{ item.url }}"
-      dest: "{{ dmg_path }}/{{ item.name }}.dmg"
-    with_items: "{{ dmgs }}"
